# rocprof-intrakernel

./: .gitignore  CMakeLists.txt  README.md
examples/gemm/: tiled_gemm.hip
examples/trace/: block_filter.hip  record.hip  sampled_loop.hip
include/rocprof_intrakernel/: rocprof_intrakernel.hpp  version.hpp
include/rocprof_intrakernel/arch/: timestamp.hpp  wave_info.hpp
include/rocprof_intrakernel/trace/: device_ctx.hpp  event.hpp  host_session.hpp  macros.hpp  trace.hpp
scripts/: analyze_rocprof_join.py  annotate_source.py  generate_explorer.py  plot_trace_summary.py  run_all_examples.sh
tests/: CMakeLists.txt  test_circular_buffer.hip  test_timestamp.hip  test_trace_roundtrip.hip  test_wave_info.hip
tools/: CMakeLists.txt
tools/codeobj_region_profiler/: CMakeLists.txt
tools/codeobj_region_profiler/src/: codeobj_profiler_client.cpp  isa_classifier.cpp  isa_classifier.h  region_mapper.cpp  region_mapper.h
tools/rocprof_counter_profiler/: CMakeLists.txt
tools/rocprof_counter_profiler/src/: rikp_common.h  rikp_counter_client.cpp  rikp_pcsamp_client.cpp
